# cmake-ghdl-compiler

./: CMakeLists.txt  LICENSE  README.md
cmake/: README.md  env.cmake  find_package.cmake
cmake/modules/: CMakeDetermineGHDLCompiler.cmake  CMakeGHDLCompiler.cmake.in  CMakeGHDLInformation.cmake  CMakeTestGHDLCompiler.cmake
examples/: CMakeLists.txt
examples/binarycounter/: CMakeLists.txt  binctr.vhd  binctr_io.xdc
tests/: CMakeLists.txt  binctr_tb.vhd
